no selecting boi

--- a/1/index.html
+++ b/1/index.html
@@ -26,6 +26,15 @@
 			iframe.src = iframeURL;
 		}
 	</script>
+	<SCRIPT LANGUAGE="javascript">
+
+function click() {
+if (event.button==1 || event.button==2) {
+}
+}
+document.onMouseDown=click
+
+</SCRIPT> 
 </head>
 <body>
 <!-- update the presentation ID with your own presentation -->
