--- a/1/index.html
+++ b/1/index.html
@@ -13,9 +13,29 @@
 		    iframe {
         overflow:hidden;
     }
-	div.lockframe {
-	z-index: -2; 
-	}
+.container_row {
+	width: 100%;
+	height: 100%;
+    position: relative;
+}
+
+.layer1 {
+    position: absolute;
+    z-index: 2;
+    left: 0;
+    top: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.layer2 {
+    position: absolute;
+    z-index: 1;
+    left: 0;
+    top: 0;
+	width: 100%;
+	height: 100%;
+}
 	</style>
 	<script>
 		// update with the desired time to refresh the presentation (in minutes)
@@ -29,15 +49,15 @@
 			iframe.src = iframeURL;
 		}
 	</script>
-	<SCRIPT LANGUAGE="javascript">
-
-
 </head>
 <body>
-<!-- update the presentation ID with your own presentation -->
-<!-- update the &delayms= with the time to show each slide (in milliseconds) -->
-<iframe class="lockframe" id="presentFrame" src="https://docs.google.com/presentation/d/1vFJU0-CH_IgKXVVm69VVMeSZMT4Grm-yy9ZzSvAAgEA/embed?start=true&loop=true&delayms=5000" frameborder="0" width="100%" height="100%" scrolling="no" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-   </div>
-  </div>
+<div class="container_row">
+    <div class="layer1">
+<img src="OVERLAY.png" width="100%" height="100%" />
+    </div>
+    <div class="layer2">
+<iframe id="presentFrame" src="https://docs.google.com/presentation/d/1vFJU0-CH_IgKXVVm69VVMeSZMT4Grm-yy9ZzSvAAgEA/embed?start=true&loop=true&delayms=5000" frameborder="0" width="100%" height="100%" scrolling="no" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+    </div>
+</div>
 </body>
 </html>
