Added credits and more
- Added Credits in the Source Code
- Added Dhrumil's own 'no-select' css code

--- a/1/index.html
+++ b/1/index.html
@@ -1,8 +1,46 @@
+<!--
+
+CREATED BY DHRUMIL SHAH
+OFFICIAL USE ONLY
+OFFERED MAY NO LONGER BE VALID, WHILE SUPPLIES LAST, SOME OFFERS MAY REQUIRE YOU TO BE ATLEST 18 OR 21.
+COPYRIGHT 2016 SAYONA, LLC
+
+FOR ANY ISSUES CONTACT: CONTACT@SAYONALLC.COM
+MAIN SITE: SAYONALLC.COM
+TWITTER: @SAYONALLC
+FACEBOOK: /SAYONALLC
+GOOGLE PLUS: HTTP://SAYONALLC.COM/+
+
+THANK YOU.
+
+-->
+
 <!DOCTYPE html>
 <html>
 <head>
   <title>TV</title>
 	<style>
+img {
+    pointer-events: none;
+}
+
+
+body{
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+* {
+cursor: inherit;
+}
+
+p {
+cursor: default;
+}
 		html, body {
 			background: black;
 			padding: 0;
@@ -38,7 +76,7 @@
 }
 	</style>
 	<script>
-		// update with the desired time to refresh the presentation (in minutes)
+		// updated the time in minites
 		var refreshMinutes = 1;
 		
 		var timer=setInterval(function(){refreshFrame()}, refreshMinutes*60*10000);
