--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta http-equiv="refresh" content="3; url=http://sayonallc.com/"/>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
+<title>Redirecting to Main Site ...</title>
+</head>
 <style>
 html { 
    width:100%; 
@@ -141,9 +149,8 @@ div {
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 </style>
-
+<body>
 <div class="image-container">
 	<p>This page will be redirected in 3 seconds ...</p>
 </div>
-
-<meta http-equiv="refresh" content="3; url=http://sayonallc.com/"/>
+</body>
