--- a/1/index.html
+++ b/1/index.html
@@ -18,6 +18,7 @@ THANK YOU.
 <!DOCTYPE html>
 <html>
 <head>
+<meta NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
   <title>TV</title>
 	<style>
 img {
