--- a/1/index.html
+++ b/1/index.html
@@ -19,6 +19,7 @@ THANK YOU.
 <html>
 <head>
 <meta NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
+<meta http-equiv="refresh" content="1680" />
   <title>TV</title>
 	<style>
 img {
