--- a/va-lottery-redirect0001.html
+++ b/va-lottery-redirect0001.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
 <meta name="apple-mobile-web-app-capable" content="yes">
-<meta http-equiv="refresh" content="1;URL='https://www.valottery.com/en/Mobile/Winning_numbers.aspx'" />
+<frame src="https://www.valottery.com/en/Mobile/Winning_numbers.aspx" frameborder="0">
 <link rel="apple-touch-icon" href="http://oi68.tinypic.com/fx48yo.jpg">
 </head>
